--- a/pom.xml
+++ b/pom.xml
@@ -47,5 +47,10 @@
 		<artifactId>jstl</artifactId>
 		<version>1.2</version>
 	</dependency>
+	<dependency>
+		<groupId>mysql</groupId>
+		<artifactId>mysql-connector-java</artifactId>
+		<version>5.1.25</version>
+	</dependency>
   </dependencies>
 </project>
