--- a/pom.xml
+++ b/pom.xml
@@ -52,5 +52,10 @@
 		<artifactId>mysql-connector-java</artifactId>
 		<version>5.1.25</version>
 	</dependency>
+	<dependency>
+		<groupId>com.amazonaws</groupId>
+		<artifactId>aws-java-sdk</artifactId>
+		<version>1.7.11</version>
+	</dependency>
   </dependencies>
 </project>
