--- a/pom.xml
+++ b/pom.xml
@@ -53,9 +53,20 @@
 		<version>5.1.25</version>
 	</dependency>
 	<dependency>
+		<groupId>org.springframework</groupId>
+		<artifactId>spring-context-support</artifactId>
+		<version>4.0.2.RELEASE</version>
+	</dependency>
+	<dependency>
+	  <groupId>com.sun.mail</groupId>
+	  <artifactId>javax.mail</artifactId>
+	  <version>1.5.2</version>
+	</dependency>
+	<dependency>
 		<groupId>com.amazonaws</groupId>
 		<artifactId>aws-java-sdk</artifactId>
 		<version>1.7.11</version>
+		<scope>test</scope>
 	</dependency>
   </dependencies>
 </project>
