--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
   <packaging>war</packaging>
   
   <build>
+  	<finalName>englishapp</finalName>
   	<plugins>
   		<plugin>
   			<groupId>org.apache.maven.plugins</groupId>
@@ -17,28 +18,17 @@
   			</configuration>
   		</plugin>
 <!--   		<plugin>
-  			<groupId>org.codehaus.mojo</groupId>
-  			<artifactId>native2ascii-maven-plugin</artifactId>
-  			<version>1.0-alpha-1</version>
-  			<executions>
-  				<execution>
-  					<id>native2ascii-utf8</id>
-  					<phase>compile</phase>
-  					<goals>
-  						<goal>native2ascii</goal>
-  					</goals>
-  					<configuration>
-  						<src>src/main/resources</src>
-  						<dest>target/classes</dest>
-  						<encoding>UTF-8</encoding>
-  						<includes>
-  							<include>*.properties</include>
-  						</includes>
-  					</configuration>
-  				</execution>
-  			</executions>
+  			<groupId>org.apache.maven.plugins</groupId> 
+  			<artifactId>maven-war-plugin</artifactId> 
+  			<version>2.4</version>
+  			<configuration>
+  				<webResources>
+  					<webXml>webapp/WEB-INF/web.xml</webXml>
+  				</webResources>
+  			</configuration>
   		</plugin> -->
   	</plugins>
+  	
   </build>
   
   <dependencies>
